docs/1.7/modules/en/pages/label-templates/label-templates.adoc
= Label Templates Overview
:revdate: 2025-09-08
:page-revdate: {revdate}

Elemental allows to specify _label templates_ in the `spec.machineInventoryLabels` and `spec.machineInventoryAnnotations` sections of the xref:references/machineregistration-reference.adoc[MachineRegistration] resources.

Their format is the canonical `key`:``value`` used in Kubernetes labels and annotations.

These label templates are converted to actual labels and annotations attached to each xref:references/machineinventory-reference.adoc[MachineInventory] resource created during the xref:rancher-os-management/architecture/services/architecture-machineonboarding.adoc[machine onboarding] phase.

The resulting labels and annotations have the same `key` of the label template.

The associated `value` is generated:

* *rendering the <<_label_templates_variables,`label template variables`>>* (if present)
* *`sanitizing`* the resulting value (in the case of the labels only)

[IMPORTANT]
====
The Elemental templating functionality covers also the xref:references/machineregistration-reference.adoc[MachineRegistration] `spec.machineName` field, which defines the resulting hostname of the registering machine and the `name` of the associated xref:references/machineinventory-reference.adoc[MachineInventory] resource.

See the <<_custom_machine_names,Machine Name>> section for more details.
====


== Label Templates' Variables

Elemental Label Templating includes a set of predefined variables that could be used inside the `value` of the _label templates_ specified in the xref:references/machineregistration-reference.adoc[MachineRegistration].

The syntax used to specify label templates' variables is:

`${ _VARFAMILY_ \/ _VARPATH_ }`

where _VARFAMILY_ defines a group (family) of supported variables and _VARPATH_ defines the actual variable name inside the belonging family group.

Elemental currently supports the following _template variable families_:

* xref:label-templates/label-templates-bios.adoc[*BIOS*]: *${ BIOS \/* _VARPATH_ *}*
* xref:label-templates/label-templates-baseboard.adoc[*BaseBoard*]: *${ BaseBoard \/* _VARPATH_ *}*
* xref:label-templates/label-templates-cpu.adoc[*CPU*]: *${ CPU \/* _VARPATH_ *}*
* xref:label-templates/label-templates-chassis.adoc[*Chassis*]: *${ Chassis \/* _VARPATH_ *}*
* xref:label-templates/label-templates-gpu.adoc[*GPU*]: *${ GPU \/* _VARPATH_ *}*
* xref:label-templates/label-templates-memory.adoc[*Memory*]: *${ Memory \/* _VARPATH_ *}*
* xref:label-templates/label-templates-network.adoc[*Network*]: *${ Network \/* _VARPATH_ *}*
* xref:label-templates/label-templates-product.adoc[*Product*]: *${ Product \/* _VARPATH_ *}*
* xref:label-templates/label-templates-runtime.adoc[*Runtime*]: *${ Runtime \/* _VARPATH_ *}*
* xref:label-templates/label-templates-storage.adoc[*Storage*]: *${ Storage \/* _VARPATH_ *}*

[CAUTION]
====
All the _template variable families_ (but _`Random`_) are enabled only if xref:references/machineregistration-reference.adoc[MachineRegistration]'s `elemental.registration.no-smbios` field is set to `false` (default).

When the `elemental.registration.no-smbios` field is set to `true`, the registering machines do not send any data required for rendering the template variables, so no variables will be available, but the *Random* variables, which are the only notable exception.

*Random* variables are always available since they are built-in on the operator side. They are also special since they are computed only once: see the xref:label-templates/label-templates-random.adoc[Random Template variables] section for more details.
====


Template variables can be mixed with static text to form the actual labels assigned to (xref:references/machineinventory-reference.adoc[MachineInventories]).

[NOTE]
.Rendering Examples
====

* Label Template tracking the number of CPU cores of the registering host (assume host has 4 cores):
 ** original label: *cpu: ${CPU\/TotalCores}-cores*
 ** rendered label: *cpu: 4-cores*
* Label Template tracking the SMBIOS UUID of the registering host:
 ** original label: *sbios-UUID: ${Product\/UUID}*
 ** rendered label: *sbios-UUID: fd95324a-c26b-4e28-8727-1dcec293a0ec*
====


== Sanitization

Once the label template value has been rendered accordingly to the included <<_label_templates_variables,label template variables>>, the resulting value is `sanitized` before being assigned to the resulting label.

*The `sanitization` enforces the label value to only contain letters (capitalized or not), numbers and the hyphen (`-`), point (`.`) and underscore (`_`) characters*:

All the characters not included are substituted with an hyphen.

Any character at the beginning and at the end of the label value must be a letter or a number. If it is not, it is dropped.

Two consecutive hyphens are replaced with one.

[NOTE]
.Rendering Example
====

* Label Template with sanitization of prohibited chars:
 ** original label: *sanitized: this:needs--sanitizing!*
 ** rendered label: *sanitized: this-needs-sanitizing*
====


== Usage of Label Templates

Label Templates allow to automatically attach and update labels and annotations to each host's xref:references/machineinventory-reference.adoc[MachineInventory] every time an host registers to the Elemental Operator.

[IMPORTANT]
====
Registration happens not only during the xref:rancher-os-management/architecture/services/architecture-machineonboarding.adoc[onboarding phase]: each host re-registers every 30 minutes (and every time it reboots). During the re-registration, the Label Templates in the associated xref:references/machineregistration-reference.adoc[MachineRegistration] are re-evaluated and added/updated in the xref:references/machineinventory-reference.adoc[MachineInventory].
====


There are basically three main cases where the label templates can be of use:

* to attach hardware data to the Elemental Catalog.
* to add selectors to pick up hosts for Cluster Provisioning.
* to define a custom template for the Machine Names.

=== Hardware data for the Elemental catalog

The Label Templates' variables can be used to attach hardware data to each xref:references/machineinventory-reference.adoc[MachineInventory] resource (which form the Elemental Catalog).

In this case, annotations may be a better choice since their values are not sanitized.

=== Selectors for Cluster Provisioning

The `Label Templates` can be used to generate labels used to identify and select machines
with special hardware properties to form new Kubernetes Clusters.

The labels attached to each xref:references/machineinventory-reference.adoc[MachineInventory] are eligible to _selector_ for the xref:references/machineinventoryselectortemplate-reference.adoc[MachineInventorySelectorTemplate] resource (see the xref:rancher-os-management/architecture/services/architecture-clusterdeployment.adoc[Kubernetes Cluster provisioning] section for more details).

=== Custom Machine Names

The hostname of the onboarding machine can be specified using the xref:references/machineregistration-reference.adoc[MachineRegistration] `spec.machineName` field.

`spec.machineName` value undergoes the same `Label Templates' variables` and `sanitization` processes reserved to the `spec.machineInventoryLabels` field.

[CAUTION]
====
There is one notable difference between the xref:references/machineregistration-reference.adoc[MachineRegistration] `spec.machineName` and `spec.machineInventorylabels` fields: during the <<_sanitization,sanitization>> process the underscore (`_`) is substituted as the other forbidden characters (i.e., it is substituted by a hyphen: `-`). This is required as the underscore is not allowed in linux hostnames.
====


For more information on how to define the hostname for Elemental hosts, see the xref:installation/hostname.adoc[HowTo/Customize hostname] section.

[NOTE]
.Rendering Example
====
* Define an hostname template like `SLE-Micro-[random string of 6 hexadecimal values]`:
 ** MachineRegistration spec: *machineName: SLE-Micro-${Random\/Hex\/6}*
 ** MachineInventory name: *SLE-Micro-32ad41*
====


== Label Templates Example

include::example$quickstart/registration-hardware-dhcphostname.adoc[]
